get likes count
